--- a/doAn/app/src/main/AndroidManifest.xml
+++ b/doAn/app/src/main/AndroidManifest.xml
@@ -9,22 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuanLyVanChuyen">
+        <activity android:name=".DanhSachVatTu"></activity>
         <activity android:name=".MainActivity">
 
         </activity>
-        <activity android:name=".Menu">
-            
-        </activity>
-
-        <activity android:name=".DanhSachVatTu">
-
-        </activity>
-        <activity android:name=".ThongKe">
-
-        </activity>
-
+        <activity android:name=".Menu"></activity>
+        <activity android:name=".ThongKe"></activity>
         <activity android:name=".DanhSachCongTrinh">
-            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ChiTietCongTrinh" />
     </application>
