--- a/doAn/app/src/main/AndroidManifest.xml
+++ b/doAn/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".ThongKePhieuVanChuyen" />
         <activity android:name=".ThongKeVatTuDoanhThuCao" />
         <activity android:name=".ThongKeVatTuDungNhieu" />
+        <activity android:name=".InCongTrinh" />
+        <activity android:name=".InChiTietPhieu" />
 
     </application>
 
