--- a/doAn/app/src/main/AndroidManifest.xml
+++ b/doAn/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuanLyVanChuyen">
-        <activity android:name=".ThongCongTrinh2VatTu"></activity>
-        <activity android:name=".TestOnly"></activity>
+        <activity android:name=".ThongCongTrinh2VatTu" />
+        <activity android:name=".TestOnly">
+
+        </activity>
         <activity android:name=".ThemVatTuPhieuVanChuyen" />
         <activity android:name=".DanhSachVatTu" />
         <activity android:name=".MainActivity">
@@ -22,7 +24,9 @@
         </activity>
         <activity android:name=".Menu" />
         <activity android:name=".ThongKe" />
-        <activity android:name=".DanhSachCongTrinh"></activity>
+        <activity android:name=".DanhSachCongTrinh">
+
+        </activity>
         <activity android:name=".ChiTietCongTrinh" />
         <activity android:name=".SuaPhieuVanChuyen" />
         <activity android:name=".SuaVatTu" />
@@ -31,6 +35,9 @@
         <activity android:name=".ThongKePhieuVanChuyen" />
         <activity android:name=".ThongKeVatTuDoanhThuCao" />
         <activity android:name=".ThongKeVatTuDungNhieu" />
+        <activity android:name=".InCongTrinh" />
+        <activity android:name=".InChiTietPhieu" />
+
     </application>
 
 </manifest>
