--- a/doAn/app/src/main/AndroidManifest.xml
+++ b/doAn/app/src/main/AndroidManifest.xml
@@ -13,23 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuanLyVanChuyen">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".ThongKeDoanhThuTheoThang">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ThongKeDoanhThuTheoThang">
+
+        </activity>
         <activity android:name=".ThongCongTrinh2VatTu" />
-        <activity android:name=".TestOnly"></activity>
+        <activity android:name=".TestOnly" />
         <activity android:name=".ThemVatTuPhieuVanChuyen" />
         <activity android:name=".DanhSachVatTu" />
 
         <activity android:name=".Menu" />
         <activity android:name=".ThongKe" />
-        <activity android:name=".DanhSachCongTrinh"></activity>
+        <activity android:name=".DanhSachCongTrinh" />
         <activity android:name=".ChiTietCongTrinh" />
         <activity android:name=".SuaPhieuVanChuyen" />
         <activity android:name=".SuaVatTu" />
